Add properties tool with the ability to set color of an existing element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,18 @@ body {
 
     display: none;
 }
+
+#properties {
+    padding: 20px;
+    width: 250px;
+    min-height: 100px;
+
+    color: #eee;
+    background-color: #1f2326;
+
+    position: absolute;
+    top: 0;
+    left: 74px;
+
+    display: none;
+}
