--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,12 @@ body {
     height: 37px;
 
     display: inline-block;
+
+    border-radius: 5px;
+}
+
+.tool.active {
+    background-color: #363d42;
 }
 
 #color-picker {
